third_party/move/move-compiler-v2/tests/file-format-generator/bug_16543.opt.exp

Diagnostics:
error: cannot implicitly pack a wrapper struct defined in a different module
  ┌─ tests/file-format-generator/bug_16543.move:8:9
  │
8 │         || {}
  │         ^^^^^
